adicionei CSS e JS

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="Pt-br">
+<link rel="stylesheet" href="github.css">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -53,9 +54,7 @@
 
 
 
-
-
-
+<script src="github.js"></script>
 
 </body>
 </html>
