--- a/HTML/AULA001/aula6.html
+++ b/HTML/AULA001/aula6.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="PT-br">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
@@ -10,7 +10,7 @@
 
 </head>
 
-<body>
+<body>corri
 
 
     <header>
