Inicio do projeto do blog

--- a/HTML/AULA001/aula6.html
+++ b/HTML/AULA001/aula6.html
@@ -10,7 +10,7 @@
 
 </head>
 
-<body>corri
+<body>
 
 
     <header>
@@ -20,7 +20,7 @@
     <main>
 
 
-        <section>
+       div
             <h2 class="título"><strong>Sobre a pedra do sal</strong></h2>
 
             <p>A Pedra do Sal é uma das praias mais conhecidas de Parnaíba, localizada no Estado do Piauí, Brasil. Ela é
