--- a/BLOG-ENEM/index.html
+++ b/BLOG-ENEM/index.html
@@ -93,7 +93,38 @@
     </main>
 
     <footer>
-      <h1>rodapé teste</h1>
+      <!-- Início do Footer -->
+<footer>
+  <div class="footer-container">
+    <!-- Coluna de navegação -->
+    <div class="footer-section">
+      <h3>Sobre o Blog</h3>
+      <ul>
+        <li><a href="/sobre">Sobre nós</a></li>
+        <li><a href="/contato">Contato</a></li>
+        <li><a href="/privacidade">Política de Privacidade</a></li>
+      </ul>
+    </div>
+
+    <!-- Coluna de redes sociais -->
+    <div class="footer-section">
+      <h3>Siga-nos</h3>
+      <ul>
+        <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
+        <li><a href="https://instagram.com" target="_blank">Instagram</a></li>
+        <li><a href="https://twitter.com" target="_blank">Twitter</a></li>
+        <li><a href="https://linkedin.com" target="_blank">LinkedIn</a></li>
+      </ul>
+    </div>
+
+    <!-- Coluna de copyright -->
+    <div class="footer-section">
+      <p>&copy; 2024 Blog Nome. Todos os direitos reservados.</p>
+    </div>
+  </div>
+</footer>
+<!-- Fim do Footer -->
+
     </footer>
 
     <script src="index.js"></script>
