--- a/BLOG-ENEM/index.html
+++ b/BLOG-ENEM/index.html
@@ -126,7 +126,7 @@
           id="commentInput"
           rows="4"
           cols="50"
-          placeholder="Escreva seu comentário aqui..."
+          placeholder="Escreva seu comentário aqui...."
         ></textarea
         ><br />
         <button onclick="addComment()">Enviar Comentário</button>
