--- a/BLOG-ENEM/index.html
+++ b/BLOG-ENEM/index.html
@@ -108,7 +108,7 @@
             src="https://s2-techtudo.glbimg.com/1SncM3d2W0OdVHG9JeWnbCcp_zM=/0x0:1890x1063/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_08fbf48bc0524877943fe86e43087e7a/internal_photos/bs/2023/c/M/88PPJBSxAyUery2uCA7Q/secondmother-site-screenings.jpg"
             alt="Cartaz do filme Que horas ela volta?"
           />
-          <h1>6 Filmes e séries que ajudam na redacão!</h1>
+          <h1>6 Filmes que ajudam na redacão!</h1>
           
             <a href="../BLOG-ENEM/filmes/filmes.html" target="_blank"
               >Leia mais</a
